chore(taiko_genesis): update genesis JSONs (#71)
* chore(taiko_genesis): update genesis JSONs

* chore: update genesis JSONs

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,7 +2,7 @@ name: "Push docker image to GCR"
 
 on:
   push:
-    branches: [taiko]
+    branches: [taiko,update-gas-issued-genesis]
     tags:
       - "v*"
 
