feat(catalyst): allow reorg in L2 (#72)
* feat(catalyst): allow reorg in L2

* chore: update workflow

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,7 +2,7 @@ name: "Push docker image to GCR"
 
 on:
   push:
-    branches: [taiko,update-gas-issued-genesis]
+    branches: [taiko]
     tags:
       - "v*"
 
